# OSS_Benchmark

./: .gitignore
TASK 1/: README.md  main.py  pyproject.toml  task1.md
TASK 1/outputs/: comparison_benchmark.csv  comparison_report.txt  lynxes_graph_summary.txt
TASK 1/src/: __init__.py  compare_systems.py  config.py  db_queries.py  ingest.py  kg.py  load_to_db.py  models.py  pipeline.py  queries.py  recommender.py  schema.py  storage.py  transform.py
TASK 1/tests/: test_queries.py  test_schema.py  test_transform.py
TASK 2/: README.md  main.py  pyproject.toml  task2.md
TASK 2/outputs/: answer_log.md  comparison_benchmark.csv  comparison_report.txt  database_proposal.md  evaluation_report.csv  quality_summary.md  retrieval_trace.json
TASK 2/src/: __init__.py  answer_extractor.py  answer_generator.py  chunker.py  compare_configs.py  config.py  document_loader.py  embeddings.py  evaluator.py  extract_entities.py  extract_relationships.py  models.py  pipeline.py  proposal.py  quality_reporter.py  retrieval_strategy.py  retriever.py
TASK 2/src/datasets/: __init__.py  multihoprag.py
TASK 2/src/storage/: __init__.py  base.py  caracal_adapter.py  caracal_external_semantic_adapter.py  external_semantic_index.py  neo4j_adapter.py  neo4j_external_semantic_adapter.py
TASK 2/tests/: test_benchmark_pipeline.py  test_caracal_adapter.py  test_multihoprag_dataset.py
TASK 3/: README.md  main.py  pyproject.toml  task3.md
TASK 3/configs/: ogbn_arxiv.yaml  ogbn_papers100M.yaml  ogbn_products.yaml
TASK 3/outputs/: benchmark_analysis.md  comparison_benchmark.csv
TASK 3/outputs/raw/: benchmark_default.csv  benchmark_filtered.csv  benchmark_multi_worker.csv  benchmark_warm_start.csv
TASK 3/src/: compare_systems.py  config.py  ingest.py  pipeline.py
TASK 3/src/backends/: base.py  caracal_lynxes_backend.py  duckdb_backend.py  neo4j_backend.py  pyg_native_backend.py
TASK 3/src/models/: graphsage.py
TASK 3/src/samplers/: caracal_sampler.py  duckdb_sampler.py  neo4j_sampler.py
TASK 3/tests/: test_samplers.py
data/: README.md
