[project]
name = "KGMovie"
version = "0.1.0"
description = "TMDB knowledge graph ETL and query project using caracaldb and lynxes."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "caracalDB>=0.2.5",
    "dask[dataframe]>=2025.12.0",
    "lynxes>=1.3.9",
    "neo4j>=6.0.0",
    "pandas>=2.3.0",
    "polars>=1.36.0",
    "psycopg[binary]>=3.3.0",
    "pyarrow>=22.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
