[project]
name = "gnn-benchmark-system"
version = "0.1.0"
description = "GNN Data Backend Benchmark System evaluating caracaldb and lynxes"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lynxes>=1.3.10",
    "torch>=2.4.0",
    "torch-geometric>=2.5.0",
    "pandas>=2.3.0",
    "polars>=1.36.0",
    "dask[dataframe]>=2025.12.0",
    "pyarrow>=22.0.0",
    "duckdb>=1.1.0",
    "neo4j>=6.0.0",
    "tabulate>=0.9.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
    "caracaldb>=0.3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
